# advent-of-code

./: .gitignore
2015/: Cargo.toml
2015/src/: day1.rs  day2.rs  day3.rs  day4.rs  lib.rs
2017/: Cargo.toml
2017/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
2018/day_10/: test.py
2018/day_11/: main.py
2018/day_12/: main.py
2018/day_13/: main.py
2018/day_14/: main.py  num.py
2018/day_16/: main.py
2018/day_17/: main.py
2018/day_18/: main.py  out.txt
2018/day_1_chronal_calibration/: Cargo.toml
2018/day_2_inventory_management_system/: Cargo.toml
2018/day_3/: Untitled.ipynb
2018/day_3_no_matter_how_you_slice_it/: Cargo.toml
2018/day_4/: Untitled.ipynb  get_input.py
2018/day_4_repose_record/: Cargo.toml
2018/day_5/: Untitled.ipynb  get_input.py
2018/day_6/: Untitled.ipynb  get_input.py
2018/day_7/: get_input.py
2018/day_8/: Untitled.ipynb
2018/day_9/: Cargo.toml  Untitled.ipynb  get_input.py
2019/: Cargo.toml
2019/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  (+13 more)
2020/: Cargo.toml
2021/: Cargo.toml
2021/day_1/: solution.ipynb
2021/day_2/: solution.ipynb
2021/day_3/: solution.ipynb
2021/input/2021/: day23.txt  day24.txt
2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  dayX.rs  lib.rs
2022/: Cargo.toml  template.rs
2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
2023/: Cargo.toml  template.rs
2023/src/: day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day9.rs  lib.rs
2024/: 1.ua  2.ua  22.ua  3.ua  test.ua
(+46 files in other folders)
