[package]
name = "aoc-2022"
version = "0.1.0"
authors = ["Forest <wizcardforest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

regex = "1"
itertools = "0.10"
rayon = "1"
slice-deque = "0.3.0"
num-bigint = "0.4.3"
num-traits = "0.2.14"
scan_fmt = "0.2.6"
eval = "0.4.3"
chumsky = "0.8.0"
petgraph = "0.6.2"

[profile.release]
overflow-checks = true
